--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.13.2",
     "class-validator": "^0.14.3",
     "mongoose": "^8.20.1",
+    "openai": "^6.9.1",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
